styles.css
html{
    height: 100%
}

body {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin: 0;
}

#header,
#footer {
    display: flex;
    flex-direction: row;
    flex: 1;
    width: 100%;
}

#container {
    display: flex;
    flex-direction: row;
    flex-shrink: 0;
    width: 500px;
    flex-wrap: wrap;
    height: 500px;
    background-color: crimson;
    padding: 20px;
}

.gridElement {
    height: 25%;
    width: 25%;
    display: flex;
    background-color: maroon;
}

